gcc/testsuite/g++.dg/cpp0x/ref-qual-multi-neg.C
// { dg-require-effective-target c++11 }

class Foo
{
public:
  void bar() const && & { }  // { dg-error "multiple ref-qualifiers" }
};
